# api/swagger/swagger.yaml
@@ -3,7 +3,8 @@ info:
   version: "0.0.1"
   title: Brackr
 # during dev, should point to your local machine
-host: brackr.us-west-2.elasticbeanstalk.com
+# host: brackr.us-west-2.elasticbeanstalk.com
+host: localhost:10010
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -18,6 +19,24 @@ consumes:
 produces:
   - application/json
 paths:
+  /images:
+    x-swagger-router-controller: images
+    get:
+      description: Search for images
+      operationId: search
+      parameters:
+        - in: query
+          name: choice
+          description: the choice to find images for
+          required: true
+          type: string
+      responses:
+        "200":
+          description: List of urls
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Images"
+
   /bracket:
     # binds a127 app logic to a route
     x-swagger-router-controller: bracket
@@ -252,7 +271,6 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/MatchPlayer'
-
   MatchPlayer:
     required:
       - seed
@@ -262,3 +280,11 @@ definitions:
         type: number
       data:
         type: string
+  Images:
+    required:
+      - images
+    properties:
+      images:
+        type: array
+        items:
+          type: string
